MDEV-27916 InnoDB ignores log write errors

In commit 685d958e38b825ad9829be311f26729cccf37c46 the log write error
handling (intentionally killing the server) was inadvertently removed.

log_file_t::write(): Change the return type to void, and crash on
an error.

Recovery: Check errors from log_sys.log.read().